  Change -N semantics so it only suppresses backgrounding; privileges
  are now dropped as in normal background operation. Darwin port fixes
  in the build recipe. Under Linux, gpsd will refrain from opening
  serial or USB devices that another process has open, avoiding potential 
  problems with class FF USB devices opened by other programs. Parallelized
  builds now work.

* Fri Aug 19 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.0
  POLL subobject name changes: fixes -> tpv, skyview -> sky.
  Fix a timestamp-clobbering bug in the C library revealed by an
  obscure car-nav device, the MyGuide 3100. The DEVICE 'activated'
  attribute becomes an ISO8601 string; the client libraries will
  still backward-compatibly read a float value. gps_unpack() is
  now a documented part of the library API. There is now a
  shared-memory export from the daemon that can be accessed through 
  the C and C++ client libraries.  xgps and cgps may now display
  the Maidenhead grid locator for current lat/lon.  xgps displays
  GST noise statistics if they are available. Codebase now has
  an scons build recipe. Direct support for activation of gpsd from
  Mac OS/X systemd. gpsdecode can now filter reports by RTCM2, RTCM3,
  or AIS message type. NMEA HEHDT is implemented. Remote gpsd instances
  can now be used as data sources via a gpsd:// URL.  There is a client
  for live-feeding GPSD data to Google Earth. The hotplug sequence no
  longer requires Python.

* Mon Mar 21 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 2.96
  Bumped maximum channel count to 32 to accommodate GPS+GLONASS devices.
  API version bumped to 5, redesign finished (changes are documented
  in the Client HOWTO). cgps now handles resize signals. Code can now
  link with uClibc for embedded use.  Various bugs in the C++ binding
  have been fixed. gpxlogger can now daemonize and write to a specified
  log file. A gpsd client can now set any locale it likes, and JSON